Closed Bug 1804551 Opened 1 year ago Closed 1 year ago

layout/base/crashtests/468645-3.xhtml causes assert with CSS named pages enabled

Categories

(Core :: CSS Parsing and Computation, defect)

defect

Tracking

()

RESOLVED FIXED
109 Branch
Tracking Status
firefox109 --- fixed

People

(Reporter: alaskanemily, Assigned: alaskanemily)

References

Details

Attachments

(1 file)

No description provided.
Blocks: 1787947
Blocks: 1723234
Assignee: nobody → emcdonough
Status: NEW → ASSIGNED
Pushed by emcdonough@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a2fc2b611fe7
Add page-name tracker when constructing table elements r=dholbert
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: