Bug 1804551 - Add page-name tracker when constructing table elements r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D164148